# mlir2sea

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp  mlir_bridge.cpp  mlir_bridge.hpp  son_bridge.cpp  son_bridge.hpp  son_main.cpp  vector_bridge.hpp
src/bridge/: arith_bridge.cpp  math_bridge.cpp  memref_bridge.cpp  scf_bridge.cpp  vector_bridge.cpp
test/: abs.mlir  add.mlir  add64.mlir  call.mlir  for_nested.mlir  for_simple.mlir  gemm.mlir  gemm_vec4.mlir  if.mlir  jacobi1d.mlir  loop.mlir  matmul.mlir  matmul_7x7.mlir  matmul_7x7_vec4.mlir  matmul_8x8_vec4.mlir  matmul_dynamic_manual.mlir  matmul_dynamic_vec4.mlir  matmul_linalg.mlir  matmul_simple.mlir  matmul_vec4.mlir  ops.mlir  relu.mlir  relu6.mlir  sigmoid.mlir  son_add.mlir  sqrt.mlir  switch.mlir  while.mlir
